# openworks

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TIMELINE.md  make.md  requirements.txt
.github/workflows/: deploy.yml
agent/: approver.py  cli.py  docgen.py  file_manager.py  llm_utils.py  main.py  planner.py  subagent_pool.py
agent/connectors/: __init__.py  gmail.py  google_drive.py  slack.py
agents_brain/docs/: session_brain.md
examples/: demo.py
include/: ConfigManager.hpp  DocGenerator.hpp  FileManager.hpp  LLMClient.hpp  Planner.hpp  SafetyApprover.hpp  SkillManager.hpp  ThreadPool.hpp
src/: ConfigManager.cpp  DocGenerator.cpp  FileManager.cpp  LLMClient.cpp  Planner.cpp  SafetyApprover.cpp  SkillManager.cpp  main.cpp
tests/: CMakeLists.txt
